Final test of the CNN model Failed
Using YOLO from this point

--- a/TrafficSignTest.ipynb
+++ b/TrafficSignTest.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
+    "import numpy as np\n",
     "import albumentations as A\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_mean = [0.48011, 0.47254, 0.52592]\n",
-    "dataset_std = [0.20765, 0.21533, 0.20043]"
+    "dataset_mean = [0.48948, 0.48214, 0.53307]\n",
+    "dataset_std = [0.21354, 0.2212, 0.20459]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +67,15 @@
     "        x = x.view(x.size(0), -1)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout3(x)\n",
-    "        logits = self.fc2(x)\n",
+    "        logics = self.fc2(x)\n",
+    "        # F.softmax(logics, dim=1)\n",
     "        \n",
-    "        return F.softmax(logits, dim=1)"
+    "        return logics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,16 +139,101 @@
     "#         print(\"Stopping...\")\n",
     "#     finally:\n",
     "#         cap.release()\n",
-    "#         print(\"Webcam released\")"
+    "#         print(\"Webcam released\")\n",
+    "# live_test_video(\"best_model.pth\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting webcam inference. Press 'q' to quit.\n",
+      "Error: No frame captured, exiting.\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.11.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1295: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvDestroyAllWindows'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 65\u001b[39m\n\u001b[32m     62\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m     64\u001b[39m cap.release()\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m \u001b[43mcv2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdestroyAllWindows\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.11.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1295: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvDestroyAllWindows'\n"
+     ]
+    }
+   ],
    "source": [
-    "# live_test_video(\"best_model.pth\")"
+    "def preprocess_frame(frame, img_size=32,\n",
+    "                     mean=[0.48011, 0.47254, 0.52592],\n",
+    "                     std=[0.20765, 0.21533, 0.20043]):\n",
+    "    rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    resized = cv2.resize(rgb, (img_size, img_size))\n",
+    "    img_float = resized.astype(np.float32) / 255.0\n",
+    "    mean_arr = np.array(mean, dtype=np.float32)\n",
+    "    std_arr = np.array(std, dtype=np.float32)\n",
+    "    norm_img = (img_float - mean_arr) / std_arr\n",
+    "    chw_img = np.transpose(norm_img, (2, 0, 1))\n",
+    "    return np.expand_dims(chw_img, axis=0)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model_path = \"TrainedModels/traffic_sign_cnn_V06_F.pth\"\n",
+    "\n",
+    "model = TrafficSignCNN(num_classes=12).to(device)\n",
+    "model.load_state_dict(torch.load(model_path, map_location=device))\n",
+    "model.eval()\n",
+    "\n",
+    "class_names = [\n",
+    "    'barred_area', 'cross_walk', 'go_straight', \n",
+    "    'no_passing_zone_beginning', 'parking_zone', 'priority_over', \n",
+    "    'steep_hill_downhill', 'steep_hill_uphill', 'stop', \n",
+    "    'tunnel_beginning', 'turn_left', 'turn_right']\n",
+    "\n",
+    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Unable to access the webcam.\")\n",
+    "    exit()\n",
+    "\n",
+    "threshold = 0.8\n",
+    "\n",
+    "print(\"Starting webcam inference. Press 'q' to quit.\")\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"Error: No frame captured, exiting.\")\n",
+    "        break\n",
+    "\n",
+    "    processed = preprocess_frame(frame)\n",
+    "    processed_tensor = torch.from_numpy(processed).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(processed_tensor)\n",
+    "        probs = F.softmax(outputs, dim=1)\n",
+    "        pred_class = torch.argmax(probs, dim=1).item()\n",
+    "        confidence = probs[0, int(pred_class)].item()\n",
+    "\n",
+    "    if confidence >= threshold:\n",
+    "        label = class_names[int(pred_class)]\n",
+    "        print(f\"Detected: {label} ({confidence*100:.1f}%)\")\n",
+    "        display_frame = frame.copy()\n",
+    "        cv2.putText(display_frame, f\"{label}: {confidence*100:.1f}%\", (10, 30),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0, 255, 255), 2)\n",
+    "        cv2.imshow(\"Traffic Sign Detection\", display_frame)\n",
+    "    else:\n",
+    "        cv2.imshow(\"Traffic Sign Detection\", frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -279,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,33 +380,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = onnx.load(\"TrainedModels/traffic_sign_cnn_V03.onnx\")\n",
+    "model = onnx.load(\"TrainedModels/traffic_sign_cnn_V06.onnx\")\n",
     "onnx.checker.check_model(model)\n",
     "\n",
-    "ort_session = ort.InferenceSession(\"TrainedModels/traffic_sign_cnn_V03.onnx\")\n",
+    "ort_session = ort.InferenceSession(\"TrainedModels/traffic_sign_cnn_V06.onnx\")\n",
     "input_name = ort_session.get_inputs()[0].name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_mean = [0.48011, 0.47254, 0.52592]\n",
-    "dataset_std = [0.20765, 0.21533, 0.20043]\n",
+    "dataset_mean = [0.48948, 0.48214, 0.53307]\n",
+    "dataset_std = [0.21354, 0.2212, 0.20459]\n",
+    "img_size = 32\n",
+    "\n",
+    "confidence_threshold = 0.7\n",
     "\n",
     "class_names = [\n",
     "    'barred_area', 'cross_walk', 'go_straight',\n",
     "    'no_passing_zone_beginning', 'parking_zone',\n",
     "    'priority_over', 'steep_hill_downhill',\n",
     "    'steep_hill_uphill', 'stop', 'tunnel_beginning',\n",
-    "    'turn_left', 'turn_right'\n",
-    "]\n",
+    "    'turn_left', 'turn_right']\n",
     "\n",
     "predcition_comment = {\n",
     "    0: \"Barred area ahead\",\n",
@@ -333,67 +422,187 @@
     "    8: \"Stop sign\",\n",
     "    9: \"Tunnel ahead\",\n",
     "    10: \"Turn left\",\n",
-    "    11: \"Turn right\"\n",
-    "}"
+    "    11: \"Turn right\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_video_frame(frame):\n",
-    "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "    frame_resized = cv2.resize(frame_rgb, (32, 32))\n",
-    "    frame_normalized = frame_resized.astype(np.float32) / 255.0\n",
-    "    frame_transposed = np.transpose(frame_normalized, (2, 0, 1))\n",
-    "    frame_expanded = np.expand_dims(frame_transposed, axis=0)\n",
-    "    return frame_expanded"
+    "def preprocess_frame(frame, img_size=32, mean=dataset_mean, std=dataset_std):\n",
+    "    rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    resized = cv2.resize(rgb, (img_size, img_size))\n",
+    "    img_float = resized.astype(np.float32) / 255.0\n",
+    "    mean_arr = np.array(mean, dtype=np.float32)\n",
+    "    std_arr = np.array(std, dtype=np.float32)\n",
+    "    norm_img = (img_float - mean_arr) / std_arr\n",
+    "    chw_img = np.transpose(norm_img, (2, 0, 1))\n",
+    "    return np.expand_dims(chw_img, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting webcam inference. Press 'q' to quit.\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: parking_zone: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 99.0%\n",
+      "Detected: stop: 99.8%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 99.7%\n",
+      "Detected: turn_left: 96.5%\n",
+      "Detected: stop: 90.7%\n",
+      "Detected: stop: 76.5%\n",
+      "Detected: stop: 76.5%\n",
+      "Detected: stop: 86.1%\n",
+      "Detected: stop: 98.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: stop: 100.0%\n",
+      "Detected: steep_hill_downhill: 100.0%\n",
+      "Detected: steep_hill_downhill: 100.0%\n",
+      "Detected: steep_hill_downhill: 100.0%\n",
+      "Detected: steep_hill_downhill: 100.0%\n",
+      "Detected: steep_hill_downhill: 99.8%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n",
+      "Detected: turn_left: 100.0%\n"
+     ]
+    }
+   ],
    "source": [
-    "cap = cv2.VideoCapture(0)  # Use 0 for webcam\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Unable to access the webcam.\")\n",
+    "    exit()\n",
     "\n",
-    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "print(\"Starting webcam inference. Press 'q' to quit.\")\n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
+    "        print(\"Error: Unable to read frame. Exiting.\")\n",
     "        break\n",
     "\n",
-    "    # Preprocess the current frame\n",
-    "    processed_frame = preprocess_video_frame(frame)\n",
+    "    # Preprocess the frame\n",
+    "    processed_frame = preprocess_frame(frame, img_size=img_size)\n",
     "    \n",
-    "    # Run inference with the ONNX model\n",
+    "    # Run inference via ONNX Runtime; assume output shape (1, 12)\n",
     "    outputs = ort_session.run(None, {input_name: processed_frame})\n",
-    "    pred_class = np.argmax(outputs[0])\n",
+    "    raw_output = outputs[0]  # shape (1, 12)\n",
     "    \n",
-    "    # Get the predicted class name and corresponding comment\n",
-    "    predicted_class_name = class_names[pred_class]\n",
-    "    comment = predcition_comment.get(int(pred_class), \"Sign detected\")\n",
+    "    # Print raw output for debugging (optional)\n",
+    "    # print(\"Raw output:\", raw_output)\n",
     "    \n",
-    "    # For demonstration, draw a fixed bounding box at the center of the frame\n",
-    "    h, w, _ = frame.shape\n",
-    "    box_size = 100  # Change as needed\n",
-    "    center_x, center_y = w // 2, h // 2\n",
-    "    x1 = center_x - box_size // 2\n",
-    "    y1 = center_y - box_size // 2\n",
-    "    x2 = center_x + box_size // 2\n",
-    "    y2 = center_y + box_size // 2\n",
-    "    cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "    # Check if the outputs are already probabilities\n",
+    "    sums = np.sum(raw_output, axis=1)\n",
+    "    if np.allclose(sums, 1.0, atol=1e-3):\n",
+    "        probs = raw_output\n",
+    "    else:\n",
+    "        exp_logits = np.exp(raw_output)\n",
+    "        probs = exp_logits / np.sum(exp_logits, axis=1, keepdims=True)\n",
     "    \n",
-    "    # Put text (predicted class and comment) above the bounding box\n",
-    "    text = f\"{predicted_class_name}: {comment}\"\n",
-    "    cv2.putText(frame, text, (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "    pred_class = int(np.argmax(probs, axis=1)[0])\n",
+    "    confidence = probs[0, pred_class]\n",
     "    \n",
-    "    # Display the frame with bounding box and text\n",
-    "    cv2.imshow('Traffic Sign Detection', frame)\n",
+    "    # Only print and show output if a sign is detected with sufficient confidence.\n",
+    "    if confidence >= confidence_threshold:\n",
+    "        text = f\"{class_names[pred_class]}: {confidence*100:.1f}%\"\n",
+    "        cv2.putText(frame, text, (30, 30), cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                    0.8, (255, 255, 0), 2)\n",
+    "        print(f\"Detected: {text}\")\n",
+    "        cv2.imshow(\"Traffic Sign Field Test\", frame)\n",
+    "    else:\n",
+    "        # Optionally, you can clear the window if no sign is detected.\n",
+    "        cv2.imshow(\"Traffic Sign Field Test\", frame)\n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
@@ -412,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -426,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
