--- a/frameExtracter.ipynb
+++ b/frameExtracter.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = r'DatasetTest/Original'\n",
+    "base_dir = r'DatasetTest'\n",
     "\n",
     "def natural_sort_key(s):\n",
     "    return [int(text) if text.isdigit() else text.lower() \n",
@@ -406,7 +406,7 @@
     "        temp_files = sorted(os.listdir(temp_dir), key=natural_sort_key)\n",
     "        for frame_idx, filename in enumerate(tqdm(temp_files, desc=f\"Renaming '{folder}'\", unit=\"file\"), 1):\n",
     "            ext = os.path.splitext(filename)[1].lower()\n",
-    "            new_name = f\"{class_idx:02d}_00_{frame_idx:05d}{ext}\"    # field 01 / frame 00\n",
+    "            new_name = f\"{class_idx:02d}_01_{frame_idx:05d}{ext}\"    # field 01 / frame 00\n",
     "            os.rename(\n",
     "                os.path.join(temp_dir, filename),\n",
     "                os.path.join(folder_path, new_name)\n",
